--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nahid Web developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="top-banner">
+    <div class="half-width">   
+        <h1>Welcome To </h1>
+        <h1><span class="orange-highlight">Nahid Hasan</span> Website</h1>
+        <h3>Professional Webdeveloper</h3>
+        <p>I'm a website developer and also a 3D animation designer. I like make website with 3D animated combination. I want to make a Software Company. I'm married, my wife name is Monalisa. She like to see 3D bill board in the public road. I got my insprieton  from her to learn about 3D animation </p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/nahid-hasan-511ba429a/">HIER ME</a>
+    </div>
+    <div class="half-width">
+        <img src="images/Nahid01.png" alt="">
+    </div>
+</section>
+<section class="dream-area">
+    <div class="half-width">
+        <img src="images/Monalisa012345.png" alt="">
+
+    </div>
+    <div class="half-width">
+        <h2>Dream Big</h2>
+        <h3>Wordl Best Developer</h3>
+        <p>I already learned about website development and 3D animation. I want to own a IT Farm in the wordl and make giant Software Company. Write Now I live  in Australia, I want to start my business from here. </p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100064365210675">FACEBOOK PAGE</a>
+
+    </div>
+
+</section>
+<section class="experience-area">
+    <h2>Experiences</h2>
+    <div id="full-stack" class="half-width singel-experience">
+    <h2>Full Stack Dev</h2>
+    <h3 class="orange-highlight">2021 - present | Pro Level Web Dev</h3>
+    <p>I'm a 2021 full stack web developer, skilled in front-end (HTML, CSS, React) and back-end (Node.js, databases). Creating dynamic, responsive web apps is my forte, blending design and functionality seamlessly.</p>
+    </div>
+    <div id="baby-web" class="half-width singel-experience">
+        <h2>Baby Web developer</h2>
+        <h3 class="orange-highlight">2020-2021 | Programming hero learner</h3>
+        <p>As a Programming Hero learner from 2020-2021, I've delved into the depths of coding, mastering languages like Python, JavaScript, and more. With a passion for problem-solving and a hunger for knowledge, I've honed my skills in building applications and exploring new technologies.</p>
+    </div>
+
+</section>
+<footer>
+    <p>copyrights. Nahid 2024, al rights reserve.</p>
+</footer>
 </body>
 </html>
